# GPU-RT

./: .gitignore  CMakeLists.txt  README.md  todo.txt
media/: cube.dae  cube.gltf  points.txt  queries.txt  rpoints.txt
media/cbox/: cbox.gltf
media/mis_test/: mis_test.gltf
media/shaders/: 1.frag.spv  1.vert.spv
src/: gpurt.cpp  gpurt.h  main.cpp
src/gui/: dbg.cpp  dbg.h  imgui_ext.h  profiler.cpp  profiler.h
src/lib/: 3d_math.h  alloc_after.h  alloc_before.h  array.h  hash.h  heap.h  lib.h  log.h  log_after.h  log_before.h  map.h  mat4.h  math.h  pair.h  printf_after.h  printf_before.h  queue.h  stack.h  string_after.h  string_before.h  types.h  vec.h  vec2.h  vec3.h  vec4.h
src/platform/: imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  vk_mem_alloc.h  vulkan.cpp  vulkan.h  window.cpp  window.h
src/scene/: bvh.cpp  bvh.h  material.cpp  material.h  obb.cpp  obb.h  object.cpp  object.h  pose.cpp  pose.h  scene.cpp  scene.h
src/shaders/: 1.frag  1.vert  bvh_brute.comp  bvh_stack.comp  bvh_threaded.comp  bvh_wide.glsl  bvh_wide2.comp  bvhcommon.glsl  cpq.comp  mesh.frag  mesh.vert  out.frag  out.vert  raycommon.glsl  rquery.rchit  rquery.rgen  rquery.rmiss  rt.rchit  rt.rgen  rt.rmiss  tonemap.frag
src/shaders/bvh/: bvh_obb.comp  bvh_wide.glsl  bvh_wide1.comp  bvh_wide3.comp  bvh_wide4.comp
src/shaders/rt/: restir.glsl  rt.rchit  rt.rgen  rt.rmiss  rtcommon.glsl  shadow.rmiss
src/util/: camera.cpp  camera.h  files.cpp  files.h  image.h  profile.cpp  profile.h
src/vk/: compute.cpp  compute.h  effect.cpp  effect.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  mesh.cpp  mesh.h  render.cpp  render.h  rt.cpp  rt.h  vk_mem_alloc.h  vulkan.cpp  vulkan.h
